# otus2_alloc

./: .travis.yml  CMakeLists.txt  buildProject  clearBuild
libs/: Alloc.cpp  Alloc.h  CMakeLists.txt  Config.h.in  hw2Arr.cpp  hw2Arr.h  ipOket.cpp  ipOket.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_hw2Arr.cpp
test/bTest/: CMakeLists.txt  btestIp4Oket.cpp
test/gTest/: CMakeLists.txt  gtestIp4Oket.cpp  test_hw2Arr.cpp
